<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Segurito</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuración</string>
    <string name="action_conectar">Conectar</string>
    <string name="action_ayuda">Ayuda</string>
    <string name="action_galeria">Galeria</string>
    <string name="action_inicio">Inicio</string>
    <string name="action_movimiento">Movimiento</string>
    <string name="action_sensores">Sensores</string>
    <string name="action_rutas">Rutas</string>
    <string name="title_activity_ruta">RutaActivity</string>
    <string name="title_activity_movimiento">Segurito</string>
    <string name="title_activity_listar_ruta">Segurito</string>
    <string name="ipwebservice">172.26.201.4</string>
    <string name="iprobotino">172.26.201.3</string>
    <string name="title_activity_ruta_activity2">Segurito</string>
    <string name="title_activity_sensores">Segurito</string>
    <string name="sensor_no_encontrado" >Sensor no encontrado</string>
    <string name="title_activity_galeria">Segurito</string>

    <string name="conectado">Conectado</string>
    <string name="desconectado">Desconectado</string>


</resources>